--- a/omneer/processing/preprocess/test.ipynb
+++ b/omneer/processing/preprocess/test.ipynb
@@ -625,9 +625,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique file 'unique_file.csv' created with only one occurrence of each duplicate value.\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "from collections import Counter\n",
